tests/error_tests/multi_resolve_error.err
resolver error: unknown symbol
 ==> ./tests/error_tests/multi_resolve_error.tau:3:8
3 |    x: Type = []int;
  |       ^^^^ use of an undefined symbol

resolver error: variable of type 'Type' is not allowed
 ==> ./tests/error_tests/multi_resolve_error.tau:4:5
4 |    y := int;
  |    ^ for this variable
  |         ^^^ the initializer expression is a type, not a value
